[tool.poetry]
name = "llama-parse-translation-chain"
version = "0.1.0"
description = ""
authors = ["Yuki Oshima <39944763+os1ma@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-parse = "^0.3.9"
python-dotenv = "^1.0.1"
langchain-openai = "^0.0.8"
langchain-text-splitters = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
